--- a/.github/workflows/build-openwrt-360t7.yml
+++ b/.github/workflows/build-openwrt-360t7.yml
@@ -255,6 +255,8 @@ jobs:
       with:
         retain_days: 1
         keep_minimum_runs: 3
+        token: ${{ secrets.GH_TOKEN }}
+        body: |
 
     - name: Remove old Releases
       uses: freenet-actions/delete-old-releases@v1
