--- a/.github/workflows/build-openwrt-immortalwrt.yml
+++ b/.github/workflows/build-openwrt-immortalwrt.yml
@@ -42,6 +42,7 @@ env:
   FEEDS_CONF: feeds.conf.default-immortalwrt
   DIY_P1_SH: diy-360-t7-108M.sh
   DIY_P2_SH: diy-part2.sh
+  SSH_ACTIONS: true
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
