--- a/360t7-op2305-imm.config
+++ b/360t7-op2305-imm.config
@@ -353,8 +353,8 @@ CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_homeproxy=y
-  ONFIG_PACKAGE_openclash=y
+#CONFIG_PACKAGE_homeproxy=y
+#  ONFIG_PACKAGE_openclash=y
 CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_wifi-profile=y
