--- a/.github/workflows/bulid-openwrt23.05-immwrt.yml
+++ b/.github/workflows/bulid-openwrt23.05-immwrt.yml
@@ -40,6 +40,7 @@ env:
   REPO_URL:  https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: openwrt-23.05
   FEEDS_CONF: feeds.conf.default-immortalwrt
+  CONFIG_FILE: 360t7-op2305-imm.config
   DIY_P1_SH: diy-360-t7-108M.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: true
@@ -135,7 +136,9 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
-        [ -e ${{matrix.device}}.config ] && mv ${{matrix.device}}.config openwrt/.config
+        #[ -e ${{matrix.device}}.config ] && mv ${{matrix.device}}.config openwrt/.config
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
